tests/baselines/reference/parser512097.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts (2 errors) ====
    var tt = { aa; } // After this point, no useful parsing occurs in the entire file
                 ~
!!! error TS1005: ':' expected.
                   ~
!!! error TS1128: Declaration or statement expected.
    
    if (true) {
    }